--- a/EcardQuery/RealtimeInquiryPage.xaml
+++ b/EcardQuery/RealtimeInquiryPage.xaml
@@ -91,7 +91,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="2*" />
             </Grid.RowDefinitions>
-            <ComboBox x:Name="accountPicker" ItemsSource="{Binding}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Margin="8" Grid.Row="1" />
+            <ComboBox x:Name="accountPicker" ItemsSource="{Binding}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Header="卡号" Grid.ColumnSpan="2" Margin="8" Grid.Row="1" />
             <Button x:Name="submitButton" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="2" Content="查询" Grid.ColumnSpan="2" Margin="8" Click="submitButton_Click" />
             <ad:AdControl Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Center" AdUnitId="11554056" ApplicationId="debec3ba-2069-4791-9fd9-fe0a1e117e8f" Width="300" Height="250" HorizontalAlignment="Center" />
         </Grid>
