--- a/EcardQuery/MainPage.xaml
+++ b/EcardQuery/MainPage.xaml
@@ -18,51 +18,7 @@
     </Page.Transitions>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel MaxWidth="500" VerticalAlignment="Center">
-            <StackPanel.Transitions>
-                <TransitionCollection>
-                    <RepositionThemeTransition/>
-                </TransitionCollection>
-            </StackPanel.Transitions>
-            <!--<Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>-->
-            <TextBox x:Name="userNameBox" PlaceholderText="用户名" Margin="12" KeyUp="userNameBox_KeyUp" TextChanged="userNameBox_TextChanged"/>
-            <TextBlock x:Name="userNameStatus" Text="用户名不正确" Margin="12,-12,12,12" Foreground="Red" Visibility="Collapsed" />
-            
-            <PasswordBox x:Name="passwdBox" Margin="12" PlaceholderText="密码" KeyUp="passwdBox_KeyUp" PasswordChanged="passwdBox_PasswordChanged"/>
-            <TextBlock x:Name="passwdStatus" Text="密码不正确" Margin="12,-12,12,12" Foreground="Red" Visibility="Collapsed" />
-
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <TextBox x:Name="randBox" Margin="12" TextWrapping="Wrap" PlaceholderText="验证码" KeyUp="randBox_KeyUp"/>
-                <Image x:Name="randImage" Margin="12" Tapped="image_Tapped" Grid.Column="1" />
-                <HyperlinkButton x:Name="randResetButton" Margin="12,0" Content="重新加载验证码" Visibility="Collapsed" Click="randResetButton_Click" Grid.Column="1" />
-                <TextBlock x:Name="randLoadingHint" Margin="12,0" Text="验证码加载中…" VerticalAlignment="Center" Grid.Column="1"/>
-            </Grid>
-            <TextBlock x:Name="randStatus" Text="验证码不正确" Margin="12,-12,12,12" Foreground="Red" Visibility="Collapsed" />
-
-            <CheckBox x:Name="rememberMeCheckBox" Margin="12" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="记住密码" />
-            <HyperlinkButton x:Name="forgetMeButton" Content="忘记我" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,0" Visibility="Collapsed" Click="forgetMeButton_Click"/>
-
-            <TextBlock x:Name="loginStatus" Text="" Margin="12" Foreground="Red" Visibility="Collapsed" />
-            <Button x:Name="loginButton" Content="登录" HorizontalAlignment="Stretch" Margin="8" VerticalAlignment="Top" Click="loginButton_Click" />
-            <TextBlock x:Name="statusBlock" TextWrapping="Wrap" Margin="12"/>
-        </StackPanel>
-        
+        <WebView x:Name="loginWebView" NavigationCompleted="loginWebView_NavigationCompleted" />
         <ProgressRing x:Name="progressRing" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Height="50" />
     </Grid>
 </Page>
