--- a/EcardQuery/MeCenterPage.xaml
+++ b/EcardQuery/MeCenterPage.xaml
@@ -41,9 +41,9 @@
                     <local:OperationItem x:Name="op_realTimeInquiry" Title="今日流水" Width="200" Height="150">
                         <local:OperationItem.Description>快速查询今天内的交易记录</local:OperationItem.Description>
                     </local:OperationItem>
-                    <local:OperationItem x:Name="op_logout" Title="注销" Width="200" Height="150">
+                    <!--<local:OperationItem x:Name="op_logout" Title="注销" Width="200" Height="150">
                         <local:OperationItem.Description>注销当前用户</local:OperationItem.Description>
-                    </local:OperationItem>
+                    </local:OperationItem>-->
                     <local:OperationItem x:Name="op_about" Title="关于" Width="200" Height="150">
                         <local:OperationItem.Description>包括开源软件协议</local:OperationItem.Description>
                     </local:OperationItem>
