--- a/EcardQuery.UI/AboutPage.xaml
+++ b/EcardQuery.UI/AboutPage.xaml
@@ -5,8 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="关于">
 
-    <ScrollView Padding="12">
-        <Grid>
+    <ScrollView>
+        <Grid Padding="12">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
