--- a/EcardQuery.UI/LoginPage.xaml
+++ b/EcardQuery.UI/LoginPage.xaml
@@ -5,10 +5,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="登录">
     <ContentPage.ToolbarItems>
-        <ToolbarItem
-            Clicked="RefreshButton_Clicked"
-            Icon="Icons/Refresh.png"
-            Text="刷新" />
+        <ToolbarItem Clicked="RefreshButton_Clicked" Text="刷新">
+            <ToolbarItem.Icon>
+                <OnPlatform
+                    x:TypeArguments="FileImageSource"
+                    Android="ic_refresh_white_24dp.png"
+                    WinPhone="Assets/Icons/Refresh.png" />
+            </ToolbarItem.Icon>
+        </ToolbarItem>
     </ContentPage.ToolbarItems>
     <WebView x:Name="loginWebView" Navigated="LoginWebView_Navigated" />
 </ContentPage>
