--- a/EcardQuery.UI/ResultView.xaml
+++ b/EcardQuery.UI/ResultView.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     x:Class="EcardQuery.UI.ResultView"
     xmlns="http://xamarin.com/schemas/2014/forms"
@@ -14,7 +14,7 @@
         BindingContext="{Binding}"
         CachingStrategy="RecycleElement"
         GroupDisplayBinding="{Binding Key}"
-        GroupShortNameBinding="{Binding Key}"
+        GroupShortNameBinding="{Binding ShortKey}"
         IsGroupingEnabled="true"
         ItemsSource="{Binding ResultItems}"
                 HasUnevenRows="True">
